﻿[h1]v0.5.7.1[/h1]
See [url=https://discord.com/channels/860671977449979914/864921239957012481]#magic-storage-changelog[/url] for more information.

TODO